# charcoal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  output.html  output_stacked.html
.github/workflow/: ci.yml
examples/: area_stacked.rs  bar_categorical.rs  box_plot_groups.rs  heatmap_correlation.rs  histogram_distribution.rs  line_timeseries.rs  scatter_iris.rs
proptest-regressions/render/: axes.txt
src/: display.rs  dtype.rs  error.rs  lib.rs  normalize.rs  theme.rs
src/charts/: area.rs  bar.rs  box_plot.rs  chart_mod.rs  heatmap.rs  histogram.rs  layer.rs  line.rs  mod.rs  scatter.rs
src/render/: axes.rs  geometry.rs  html.rs  mod.rs  raster.rs
tests/: output_paths.rs  snapshots.rs
tests/snapshots/: snapshots__area.snap  snapshots__bar.snap  snapshots__box_plot.snap  snapshots__heatmap.snap  snapshots__histogram.snap  snapshots__line.snap  snapshots__scatter.snap  snapshots__scatter_dark_theme.snap  snapshots__scatter_no_title.snap  snapshots__scatter_palette_wrap.snap
