[package]
name        = "charcoal"
version     = "0.1.0"
edition     = "2021"
rust-version = "1.75"
license     = "MIT OR Apache-2.0"
description = "Declarative, DataFrame-native chart library for Polars. No browser required."
repository  = "https://github.com/your-handle/charcoal"
keywords    = ["visualization", "charts", "polars", "dataframe", "svg"]
categories  = ["visualization", "science"]

[dependencies]
polars        = { version = "0.38", features = ["lazy"] }
thiserror     = "1.0"
resvg         = { version = "0.42", optional = true }
evcxr_runtime = { version = "1.1.0", optional = true }
ndarray       = { version = "0.15", optional = true }

[features]
default     = []
notebook    = ["dep:evcxr_runtime"]
static      = ["resvg"]
ndarray     = ["dep:ndarray"]
interactive = []

[dev-dependencies]
polars = { version = "0.38", features = ["lazy", "csv"] }
insta  = "1.0"
proptest = "1.0"
tempfile = "3"